<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.github.w_kamil.movieapp.Search.SearchActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/poster_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/poster_header"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@+id/search_button">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_question_hint"
                android:lines="1"/>

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_input_layout"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/ic_search" />

        <CheckBox
            android:id="@+id/year_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_layout"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/by_year" />

        <NumberPicker
            android:id="@+id/year_number_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/year_checkbox"
            android:layout_below="@+id/year_checkbox"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/type_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/year_checkbox"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/year_checkbox"
            android:text="@string/by_type" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/type_checkbox"
            android:layout_below="@+id/type_checkbox"
            android:layout_marginTop="16dp"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/radio_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie" />

            <RadioButton
                android:id="@+id/radio_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/series" />

            <RadioButton
                android:id="@+id/radio_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game" />

        </RadioGroup>


    </RelativeLayout>
</ScrollView>